[package]
name = "spmc"
version = "0.1.0"
authors = ["Damir Shaikhutdinov <lost404@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "spmc_bench"
harness = false
