[package]
name = "spmc_queue"
version = "0.1.0"
authors = ["Damir Shaikhutdinov <lost404@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "spmc_bench"
harness = false

[target.'cfg(loom)'.dependencies]
loom = "0.4"
